tdf#156282 Make 'Fold/Unfold Including Sub Levels' menu items

show for outline folding 'Include sub levels' mode

In addition, when sub outlines are not visible in the document view,
grey them out in the Navigator content tree instead of not including
them.

Change-Id: Icbdd254734df6c2fa95a7477a704e313b73d1cb5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155881
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>